add api for the printer and creator to item
